Started HTML tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
   <h1>Weblab: Greta Crockett</h1>
   <p>
-    <a href="homework/index.html">HTML Demo</a>
+    <a href="homework/class-demo/index.html">HTML Demo</a>
   </p>
 </body>
