--- a/homework/class-demo/index.html
+++ b/homework/class-demo/index.html
@@ -42,5 +42,37 @@
   <footer>
     Footer
   </footer>
+
+  <p>
+
+Hello, the <em>world</em> is still <u>round</u>.
+The temperature is nice and there are some <strong>clouds</strong> in the sky.
+  </p>
+
+  <small>
+This is small text
+  </small>
+
+<cite>Shakespeare</cite>
+
+<button type="button" name="button">Click Me!</button>
+
+<hr>
+
+<blockquote cite="www.google.com">
+  Trump said...
+</blockquote>
+
+<q>
+  Trump said...
+</q>
+
+<a href="http://google.com" target="_blank">
+here
+</a>
+
+<aside>
+  aside 
+</aside>
   </body>
   <html>
