--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
   <p>
     <a href="homework/class-demo/index.html">HTML Demo</a>
   </p>
+  <p>
+
+
+</p><a href="homework/htmlresume/">HTML Resume</a>
 </body>
