HTML final final final

--- a/homework/htmlresume/index.html
+++ b/homework/htmlresume/index.html
@@ -26,8 +26,8 @@
       <li>Developed company branding techniques by highlighting Corporate Social Responsibility goals and creating original content using the identified target market found through Google trends analysis and research</li>
     </ul>
 
-      <b>University of Miami School of Business</b> <i>Consultant and Special Program Coordinator August 2015-May 2017</i>
-      <ul>
+    <b>University of Miami School of Business</b> <i>Consultant and Special Program Coordinator August 2015-May 2017</i>
+    <ul>
       <li>Assisted in the reconstruction of the introductory to business course on Cultural Competency in the Global Workplace and Finding Your Personal Brand for over 500 new students</li>
       <li>Organized orientation for over 500 new students with a group of five other students</li>
     </ul>
@@ -39,13 +39,10 @@
     </ul>
     <h2>SKILLS, ACTIVITIES & INTERESTS</h2>
     <ul>
-      <b>Languages:</b> Spanish
-      <br>
-      <b>Technical Skills:</b> Advanced Excel skills (macros, pivot tables, v-lookups, etc.), QuickBooks, Sketch, Adobe InDesign, Adobe Illustrator, Adobe Photoshop, Adobe Premiere, HTML, CSS
-      <br>
-      <b>Activities:</b> Volunteering
-      <br>
-      <b>Interests:</b> Trading cryptocurrency, Start-ups, Discovering music, Social media and marketing strategy, Practicing yoga, International travel
+      <li><b>Languages:</b> Spanish</li>
+      <li><b>Technical Skills:</b> Advanced Excel skills (macros, pivot tables, v-lookups, etc.), QuickBooks, Sketch, Adobe InDesign, Adobe Illustrator, Adobe Photoshop, Adobe Premiere, HTML, CSS</li>
+      <li><b>Activities:</b> Volunteering</li>
+      <li><b>Interests:</b> Trading cryptocurrency, Start-ups, Discovering music, Social media and marketing strategy, Practicing yoga, International travel</li>
     </ul>
 
   </main>
