--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
+
 <head>
   <title>Weblab</title>
 </head>
+
 <body>
   <h1>Weblab: Greta Crockett</h1>
   <p>
     <a href="homework/class-demo/index.html">HTML Demo</a>
   </p>
+
   <p>
-
-
-</p><a href="homework/htmlresume/">HTML Resume</a>
-<p><a href="homework/CSS Demo/">CSS Demo</a></p>
+  <a href="homework/htmlresume/">HTML Resume</a>
+  </p>
+  <p>
+    <a href="homework/CSS Demo/">CSS Demo</a>
+  </p>
+  <p>
+    <a href="homework/responsive-demo">Responsive Demo</a>
+  </p>
+  <p>
+    <a href="homework/cssresume">CSS Resume</a>
+  </p>
+  <p>
+<a href="homework/CSS-Grid">CSS Grid</a>
+  </p>
 </body>
