--- a/homework/CSS Demo/index.html
+++ b/homework/CSS Demo/index.html
@@ -11,5 +11,8 @@
     <p>Mars says hi too!</p>
     <p class="venus"> Venus says hi too!</p>
     <p><a href="page2.html">Go to page 2</a> </p>
+    <div class="demo">
+
+    </div>
   </body>
 </html>
