--- a/homework/CSS Demo/index.html
+++ b/homework/CSS Demo/index.html
@@ -10,7 +10,9 @@
     <h1>Hello World</h1>
     <p>Mars says hi too!</p>
     <p class="venus"> Venus says hi too!</p>
-    <p><a href="page2.html">Go to page 2</a> </p>
+    <p>
+      <a href="page2.html">Go to page 2</a>
+    </p>
     <div class="demo">
 
     </div>
