--- a/homework/CSS-grid/index.html
+++ b/homework/CSS-grid/index.html
@@ -5,7 +5,7 @@
     <title>CSS-Grid Examples</title>
   </head>
   <body>
-    <a href="basic.html">Basic Demo</a><br>
-    <a href="layout.html">Layout Demo</a>
+    <a href="basic.html">Basic Grid</a><br>
+    <a href="Layout.html">Layout Grid</a><br>
   </body>
 </html>
