--- a/homework/responsivewebsite/index.html
+++ b/homework/responsivewebsite/index.html
@@ -3,7 +3,7 @@
 <title>My Dapple Margaux</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-  <link rel="stylesheet" href="css\layout.css">
+  <link rel="stylesheet" href="css/layout.css">
   <script src="https://use.fontawesome.com/33c63c7b1f.js"></script>
 </head>
 <body>
@@ -142,5 +142,6 @@ $("#home").click(function(){
        scrollTop: $('#scoutingreport1').offset().top
      },2000);
    });
+   <script>
 </body>
 </html>
