--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </p>
 
   <p>
-  <a href="homework/htmlresume/">HTML Resume</a>
+    <a href="homework/htmlresume/">HTML Resume</a>
   </p>
   <p>
     <a href="homework/CSS Demo/">CSS Demo</a>
@@ -23,7 +23,17 @@
     <a href="homework/cssresume">CSS Resume</a>
   </p>
   <p>
-<a href="homework/CSS-Grid">CSS Grid</a>
+    <a href="homework/CSS-Grid">CSS Grid</a>
   </p>
+  <p>
+    <a href="homework/responsivewebsite">Responsive Website</a>
+  </p>
+  <p>
+    <a href="homework/jquery">Jquery Demo</a>
+  </p>
+  <p>
+    <a href="homework/jquery1">Jquery Interactive</a>
+  </p>
+
+  <p><a href="homework/titledpage">Titled Plug-In</p>
 </body>
-<a href="homework/responsivewebsite">Responsive Website</a>
