--- a/index.html
+++ b/index.html
@@ -35,5 +35,5 @@
     <a href="homework/jquery1">Jquery Interactive</a>
   </p>
 
-  <p><a href="homework/titledpage">Titled Plug-In</p>
+  <p><a href="homework/vacationplugin">Plug-In</p>
 </body>
